<resources>
    <string name="app_name">HogarGestor</string>
    <string name="hintUser">Email</string>
    <string name="register">Registrarse</string>
    <string name="welcomeText">Bienvenido</string>
    <string name="regIntro">Bienvenido al portal de Hogar Gestor, por favor complete los campos a continuación para proceder con su registro</string>
    <string name="regName">Nombre</string>
    <string name="regLastName">Apellido</string>
    <string name="regNIT">NIT</string>
    <string name="regEmail">Correo electrónico</string>
    <string name="regPhone">Telefono</string>
    <string name="regOutro">A continuación digite su contraseña, recuerde que debe contener mínimo 8 caracteres, entre los cuales debe haber por lo menos una letra mayúscula, una minúsculas, un número y un caracter especial</string>
    <string name="regPassword">Contraseña</string>
    <string name="regPrivacy">Acepto las políticas de tratamiento de datos</string>
    <string name="confirmPassword">Confirmar Contraseña</string>
    <string name="required">Campo requerido</string>
    <string name="invalidInput">Dato invalido</string>
    <string name="passwordNotMatch">Las contraseñas no coinciden</string>
    <string name="welcome">Bienvenido a la app, siga y sientese, sirvase un trago y sientase como en su casa</string>
    <string name="instructions">Para iniciar, agregue una nueva tarea a la lista de tareas</string>
    <string name="btnTasks">Ver tareas</string>
    <string name="welcomeToolbar">Bienvenido</string>
    <string name="taskToolbar">Panel de tareas</string>
    <string name="createNewTask">Indique la información para su nueva tarea</string>
    <string name="time">Hora</string>
    <string name="place">Lugar</string>
    <string name="addTask">Agregar Tarea</string>
    <string name="editTask">Editar Tarea</string>
    <string name="cancel">Cancelar</string>
    <string name="add">Agregar</string>
    <string name="edit">Editar</string>
    <string name="authError">Se ha producido un error con el registro</string>
    <string name="error">Error</string>
    <string name="accept">Aceptar</string>
    <string name="logout">Cerrar sesión</string>
    <string name="loginGoogle">Google</string>
    <string name="login">Login</string>
    <string name="forgotPassword">¿Olvidaste la contraseña?</string>
    <string name="recoverPass">Recuperar contraseña</string>
    <string name="typeRecoveryEmail">Digita el email con el que registraste tu cuenta</string>
    <string name="recover">Recuperar</string>
    <string name="deleted">"Deleted "</string>
    <string name="undo">Deshacer</string>


</resources>