<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_marginTop="150dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recoverPass"
        android:textSize="30dp"
        android:textAlignment="center"
        android:textStyle="bold"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/typeRecoveryEmail"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="40dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="40dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/recoveryEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/regEmail"
            android:gravity="center"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRecover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recover"
        android:textColor="@color/white"
        android:backgroundTint="@color/skin"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"/>

</LinearLayout>